Created all but search feature.

--- a/FileSysteemSolution/FileSystem.API/FileSystem.API.csproj
+++ b/FileSysteemSolution/FileSystem.API/FileSystem.API.csproj
@@ -11,13 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\Files\Responses\" />
     <Folder Include="Models\Foldes\Responses\" />
-    <Folder Include="Repositories\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
