Added domain project

--- a/FileSysteemSolution/FileSystem.API/FileSystem.API.csproj
+++ b/FileSysteemSolution/FileSystem.API/FileSystem.API.csproj
@@ -15,8 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Files\Responses\" />
-    <Folder Include="Models\Foldes\Responses\" />
+    <ProjectReference Include="..\FileSystem.Domain\FileSystem.Domain.csproj" />
   </ItemGroup>
 
 </Project>
